# Data_Analysis

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Data_Analysis_Config.cmake.in  Data_Analysis_Installer.cmake  main.cpp
src/DataFiles/: CMakeLists.txt  README.md  data_table.cpp  data_table.hpp
src/DataStream/: CMakeLists.txt  DataStream_Installer.cmake  Data_Analysis_DataStream_Config.cmake.in  README.md  datastream.cpp  datastream.hpp
src/DataStream/Tests/: CMakeLists.txt  contiguous_import_test.cpp  datastream_tester.hpp  noncontiguous_import_test.cpp
src/Statistics/: CMakeLists.txt  Data_Analysis_StatisticsConfig.cmake  Data_Analysis_Statistics_Config.cmake.in  README.md  Statistics_Installer.cmake  bootstrapper.hpp  fast_template_powers.hpp  int_power_templates.hpp  measures_of_center.cpp  measures_of_center.hpp
src/Statistics/Tests/: CMakeLists.txt  moc_test.cpp
src/Statistics/Tests/MoC_Tests/: CMakeLists.txt  moc_kurtosis.cpp  moc_mean.cpp  moc_skewness.cpp  moc_tests.hpp  moc_variance.cpp
